# practical-deep-learning-for-coders

part1/01/: 01.ipynb  README.md  pyproject.toml
part1/01/.ipynb_checkpoints/: 01-checkpoint.ipynb
