[tool.poetry]
name = "01"
version = "0.1.0"
description = ""
authors = ["metaguji <59725664+metaguji@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
cffi = "^1.17.0"
fastai = "^2.7.16"
duckduckgo-search = "^6.2.6"
jupyter = "^1.0.0"
ipykernel = "^6.29.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
